# mp-music

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs  scanner.rs  settings.rs  state.rs  tracks.rs
src/components/: Header.tsx  MusicList.tsx  SettingsModal.tsx  Sidebar.tsx  Tracks.tsx
