[package]
name = "mp-music"
version = "0.0.1"
description = "MP Music player"
authors = ["Mattepuffo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mp_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lofty = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.4"
walkdir = "2.5.0"
